Fix image overflow

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -11,6 +11,7 @@ p>img {
     max-width: 32rem;
     border-radius: 0.5rem;
     max-height: 24rem;
+    width: 100%;
 }
 
 p img+em,
